--- a/server/libs/tsconfig.json
+++ b/server/libs/tsconfig.json
@@ -3,8 +3,6 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-  },
-  "include": [
-    "src/**/*"
-  ]
+  }
+  ,"include": ["./src"]
 }
