--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lerna-monorepo",
   "version": "1.0.0",
   "description": "",
-  "private":true,
+  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,7 +14,7 @@
     "lerna": "^4.0.0"
   },
   "workspaces": [
-    "app/**",
+    "app/shared",
     "server/**"
-]
+  ]
 }
