--- a/app/portal/.gitignore
+++ b/app/portal/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+/deploy/rancher/build
 
 # misc
 .DS_Store
@@ -18,6 +19,15 @@
 .env.test.local
 .env.production.local
 
+# log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# ide
+.idea
+
+# ra-lib
+/src/ra-lib
+/src/pages/local
+/server
