--- a/app/portal/package.json
+++ b/app/portal/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": "cross-env PORT=3000 NODE_ENV=development REACT_APP_RUN_ENV=development craco start",
         "start": "nodemon -w craco.config.js -w ./src/theme.less -w ./src/setupProxy.js -w ./src/setupProxyConfig.json --exec \"yarn dev\"",
-        "build": "cross-env REACT_APP_CONFIG_ENV=test REACT_APP_RUN_ENV=test craco build",
+        "build": "cross-env REACT_APP_CONFIG_ENV=development REACT_APP_RUN_ENV=development craco build",
         "build:prod": "cross-env NODE_ENV=production REACT_APP_CONFIG_ENV=production REACT_APP_RUN_ENV=production craco build",
         "build:analyzer": "cross-env ANALYZER=true yarn build",
         "build:time": "cross-env ANALYZER_TIME=true yarn build",
