--- a/app/common/package.json
+++ b/app/common/package.json
@@ -17,7 +17,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.build.json -w"
   },
   "eslintConfig": {
     "extends": [
