--- a/app/portal/package.json
+++ b/app/portal/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "axios-mock-adapter": "^1.20.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
@@ -21,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "tsc -p tsconfig.json", 
+    "build": "tsc -p tsconfig.json",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
