--- a/app/tsconfig.react.json
+++ b/app/tsconfig.react.json
@@ -18,6 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": false,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "paths": {"@common/reactlib":["./common/src"]}
   }
 }
