--- a/app/common/package.json
+++ b/app/common/package.json
@@ -2,7 +2,7 @@
   "name": "@common/reactlib",
   "version": "0.1.0",
   "private": false,
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
